# rs-axum-api

./: Cargo.toml  LICENSE  README.md
src/: authentication.rs  constants.rs  handler.rs  logging.rs  main.rs  middleware.rs  response.rs
src/authentication/: jwt.rs  role.rs
src/constants/: jwt_constants.rs
src/handler/: version_handler.rs
src/logging/: ecs_logger.rs  extra_fields.rs  timestamp.rs
src/middleware/: auth_middleware.rs
src/response/: api_response.rs
src/s3_client/: client.rs
